[package]
name = "avc2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wrapping_arithmetic = "0.1.0"
termion = "1.5.6"
avdrive = { git = "https://github.com/ambyshframber/avd" }
thiserror = "1.0.31"
clap = { version = "3.1.18" }
